--- a/css/Actividad2.21.css
+++ b/css/Actividad2.21.css
@@ -20,5 +20,7 @@
     width: 150px;
     border-radius: 50%;
     background-image: radial-gradient(white 40%, transparent 0%), conic-gradient(rgb(239, 59, 59) 0deg 10%, rgb(253, 50, 226) 0deg 35%, rgb(107, 58, 255) 0deg 65%, rgb(8, 207, 210) 0deg 100%);
-
+}
+#home {
+    float: right;
 }
