--- a/css/Actividad2.24.css
+++ b/css/Actividad2.24.css
@@ -1,21 +1,28 @@
+#divPrimario {
+    display: flex;
+    justify-content: space-between;
+}
 #der {
-    float: right;
+
     border: 3px dotted black;
     background-color: gray;
     padding-left: 3%;
     padding-bottom: 30px;
     padding-top: 10px;
     padding-right: 10px;
+    font-size: 1.5em;
+    
     
 }
 #izq {
-    float: left;
+
     border: 3px dotted black;
     background-color: gray;
     padding-right: 3%;
     padding-bottom: 30px;
     padding-top: 10px;
     padding-left: 10px;
+    font-size: 1.5em;
     
 }
 #parrafo {
@@ -34,11 +41,4 @@
 }
 #home {
     float: right;
-}
-@media (max-width: 320px) {
-    #der,#izq {
-        float: none;
-        text-align: center;
-        left: 0%;
-    }
 }
